[project]
name = "broadlistening"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.10.0",
    "joblib>=1.4.2",
    "langchain-community==0.3.3",
    "langchain-openai==0.2.3",
    "openai>=1.59.7",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pydantic-settings>=2.7.1",
    "pytest>=8.3.5",
    "python-dotenv>=1.0.1",
    "scipy>=1.15.1",
    "umap-learn>=0.5.7",
]
